2008-02-09  Peter Bloomfield

	* src/balsa-message.c: (bm_find_scroll_to_iter): scroll least
	amount to get text on screen.

2008-02-09  Peter Bloomfield

	* src/balsa-mblist.c: (bmbl_select_mailbox): check that
	button-press event was on the correct window.

2008-02-08  Peter Bloomfield

	* src/balsa-message.c: (bm_find_again): clean up.

2008-02-08  Peter Bloomfield

	* src/balsa-message.c: (bm_find_set_status): new function, hides
	the separator using gtk_separator_tool_item_set_draw instead of
	gtk_widget_hide;
	(bm_find_entry_changed_cb, bm_find_again,
	balsa_message_find_in_message): use bm_find_set_status;
	(bm_disable_find_entry): boolean => void.

2008-02-08  Peter Bloomfield

	* libbalsa/libbalsa.c: (libbalsa_threads_leave): restore
	warning.
	* src/balsa-message.c: (bm_find_entry_changed_cb, bm_find_again,
	bm_pass_to_find_entry): do not hide separator, that triggers
	warnings;
	(balsa_message_find_in_message): find again only if found.

2008-02-08  Peter Bloomfield

	* src/balsa-message.c: (bm_find_entry_changed_cb,
	bm_find_again): do not mess with thread lock.

2008-02-08  Peter Bloomfield

	* src/balsa-message.c: (bm_pass_to_find_entry): test only SHIFT
	and CONTROL bits.

2008-02-07  Peter Bloomfield

	* libbalsa/libbalsa.c: (libbalsa_threads_leave): disable
	warning about dropping lock when not holding it--GtkTextView
	seems to trigger it.
	* src/balsa-message.c: (bm_scroll_to_iter,
	bm_find_entry_changed_cb, bm_find_again, bm_find_prev_cb,
	bm_find_next_cb, bm_find_bar_new, bm_pass_to_find_entry,
	bm_disable_find_entry, balsa_message_init, balsa_message_set,
	balsa_message_find_in_message): implement find-in-message.
	* src/balsa-message.h: api for find-in-message.
	* src/main-window.c: use it.

2008-01-09  Peter Bloomfield

	* libbalsa/libbalsa.h: add width and height to api for
	libbalsa_show_message_source.
	* libbalsa/source-viewer.c: (lsv_size_allocate_cb): save width
	and height.
	(libbalsa_show_message_source): add width and height to api;